interruption concert_evaluation

--- a/app/views/public/revues/edit.html.erb
+++ b/app/views/public/revues/edit.html.erb
@@ -1,2 +1,28 @@
-<h1>Public::Revues#edit</h1>
-<p>Find me in app/views/public/revues/edit.html.erb</p>
+<div class="low">
+  <% if @review.errors.any? %>
+    <h3><font color="red"><%= @review.errors.count %>点の記入漏れがあります</font></h3><!--エラーメッセ-->
+    <ul>
+      <% @review.errors.full_messages.each do |message| %>
+      <li><font color="red"><%= message %></font></li>
+      <% end %>
+    </ul>
+  <% end %>
+  <div class="review_edit">レビュー編集ページ</div><br>
+  <div class="col-xs-11">
+  <div class="review">
+    <%= form_for(@review, url: book_review_path) do |r| %>
+    <table class="table table-bordered table-hover">
+      <tr>
+        <th class="info"><%= r.label :タイトル %></th>
+        <th><%= r.text_field :title,:size => "90*5" %></th>
+      </tr>
+      <tr>
+        <th class="info"><%= r.label :本文 %></th>
+        <th><%= r.text_area :text,:size => "90*5" %></th>
+      </tr>
+    </table>
+      <%= r.submit "更新",class: "btn btn-primary btn-block" %>
+    <% end %>
+  </div>
+  </div>
+</div>
