--- a/app/views/public/revues/show.html.erb
+++ b/app/views/public/revues/show.html.erb
@@ -40,4 +40,20 @@
       </div>
     </div>
   </div>
+  <div>
+    <p>コメント件数：<%= @revue.comments.count %></p>
+    <% @revue.comments.each do |comment| %>
+      <%= comment.user.name %>
+      <%= comment.created_at.strftime('%Y/%m/%d') %><%= comment.comment %>
+      <% if post_comment.user == current_user %>
+        <%= link_to "削除", post_image_post_comment_path(post_comment.post_image, post_comment), method: :delete %>
+      <% end %>
+    <% end %>
+  </div>
+  <div>
+    <%= form_with model: [@revue, @comment] do |f| %>
+      <%= f.text_area :comment, rows: '5', placeholder: "コメントをここに" %>
+      <%= f.submit "送信する" %>
+    <% end %>
+  </div>
 </div>
