--- a/app/views/admin/categories/edit.html.erb
+++ b/app/views/admin/categories/edit.html.erb
@@ -1,2 +1,16 @@
-<h1>Admin::Categories#edit</h1>
-<p>Find me in app/views/admin/categories/edit.html.erb</p>
+<div class='container'>
+    <div class='row'>
+        <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+            <h2>ジャンル編集</h2>
+            <%= form_with model:@genre, url: admin_genre_path, method: :patch, local:true do |f| %>
+                <div class="form-group">
+                    <%= f.label :name %>
+                    <%= f.text_field :name, class:'form-control book_title' %>
+                </div>
+                <div class="form-group">
+                    <%= f.submit class:'btn btn-success' %>
+                </div>
+            <% end %>
+        </div>
+    </div>
+</div>
