--- a/app/views/public/concerts/confirm.html.erb
+++ b/app/views/public/concerts/confirm.html.erb
@@ -1,6 +1,6 @@
 <div class='container'>
   <div class='row'>
-    <h3 class='m-4'>注文情報確認画面</h3>
+    <h3 class='m-4'>登録情報確認画面</h3>
   </div>
 
     <div class='row'>
@@ -8,56 +8,57 @@
             <table class='table table-bordered'>
                 <thead class='table-secondary'>
                     <tr>
-                        <th class='col-4'>商品名</th>
+                        <th class='col-4'>コンサート名</th>
                         <th class='col-1 text-center'>単価(税込)</th>
-                        <th class='col-1 text-center'>数量</th>
-                        <th class='col-1 text-center'>小計</th>
                      </tr>
                 </thead>
                 <tbody>
-                    <% @carts.each do |cart| %>
+                    <% @concerts.each do |concert| %>
                     <tr>
                         <td>
-                            <%= image_tag cart.item.get_image, size:'50x50'%>
-                            <%= cart.item.name %>
+                            <%= image_tag concert.get_image, size:'50x50'%>
+                            <%= concert.name %>
+                            <%= concert.introduction %>
+                            <%= concert.price %>
                         </td>
-                        <td class='text-right'><%= cart.item.add_tax_price %>円</td>
-                        <td class='text-right'><%= cart.amount %>個</td>
-                        <td class='text-right'><%= cart.add_total_payment_all %>円</td>
+                        <!--<td class='text-right'><%= cart.item.add_tax_price %>円</td>-->
+                        <!--<td class='text-right'><%= cart.amount %>個</td>-->
+                        <!--<td class='text-right'><%= cart.add_total_payment_all %>円</td>-->
                     </tr>
                     <% end %>
                 </tbody>
               </table>
             </div>
 
-        <div class='col-3'>
-            <table class='table table-bordered'>
-                <tr>
-                    <td class='table-secondary'>送料</td>
-                    <td class='text-right'><%= @order.shipping_cost.to_s(:delimited) %>円</td>
-                </tr>
-                <tr>
-                    <td class='table-secondary'>商品合計</td>
-                    <td class='text-right'><%= @total %>円</td>
-                </tr>
-                <tr>
-                    <td class='table-secondary'>請求金額</td>
-                    <td class='text-right'><%= @order.shipping_cost + @total %>円</td>
-                </tr>
-            </table>
-         </div>
-    </div>
+    <!--    <div class='col-3'>-->
+    <!--        <table class='table table-bordered'>-->
+    <!--            <tr>-->
+    <!--                <td class='table-secondary'>送料</td>-->
+    <!--                <td class='text-right'><%= @order.shipping_cost.to_s(:delimited) %>円</td>-->
+    <!--            </tr>-->
+    <!--            <tr>-->
+    <!--                <td class='table-secondary'>商品合計</td>-->
+    <!--                <td class='text-right'><%= @total %>円</td>-->
+    <!--            </tr>-->
+    <!--            <tr>-->
+    <!--                <td class='table-secondary'>請求金額</td>-->
+    <!--                <td class='text-right'><%= @order.shipping_cost + @total %>円</td>-->
+    <!--            </tr>-->
+    <!--        </table>-->
+    <!--     </div>-->
+    <!--</div>-->
 
-    <diV class='row ml-4 my-2'>
-        <h5 class='col-2 font-weight-bolder'>支払い方法</h5>
-           　<%= @order.payment_method_i18n %>
-    </div>
+    <!--<diV class='row ml-4 my-2'>-->
+    <!--    <h5 class='col-2 font-weight-bolder'>支払い方法</h5>-->
+    <!--       　<%= @order.payment_method_i18n %>-->
+    <!--</div>-->
 
-    <div class='row ml-4 mb-2'>
-    　  <h5 class='col-2 font-weight-bolder'>お届け先</h5>
-    　       〒<%= @order.add_full_address %><br/>
-            <%= @order.name %>
-    </div>
+    <!--<div class='row ml-4 mb-2'>-->
+    <!--　  <h5 class='col-2 font-weight-bolder'>お届け先</h5>-->
+    <!--　       〒<%= @order.add_full_address %><br/>-->
+    <!--        <%= @order.name %>-->
+    <!--</div>-->
+    
     <div class='text-center mb-2'>
         <%= form_with model: @order, url:orders_path,method: :post do |f|%>
             <%= f.hidden_field :postal_code %>
