--- a/app/views/public/concerts/new.html.erb
+++ b/app/views/public/concerts/new.html.erb
@@ -1,14 +1,14 @@
 <div class="container my-5">
   <div class="row">
     <div class="col-md-10 col-sm-12 mx-6 mx-sm-auto px-auto">
-        <h3 class="mb-5 col-8 d-flex justify-content-center"><span>商品新規登録</span></h3>
+        <h3 class="mb-5 col-8 d-flex justify-content-center"><span>コンサート新規登録</span></h3>
 
-                <%= form_with model: @item, url: admin_items_path, method: :post, local:true do |f| %>
-                <% if @item.errors.any? %>
+                <%= form_with model: @concert, url: public_concerts_path, method: :post, local:true do |f| %>
+                <% if @concert.errors.any? %>
                   <div id="error_explanation">
-                    <h3><%= pluralize(@item.errors.count, "error") %> prohibited this obj from being saved:</h3>
+                    <h3><%= pluralize(@concert.errors.count, "error") %> prohibited this obj from being saved:</h3>
                     <ul>
-                      <% @item.errors.full_messages.each do |message| %>
+                      <% @concert.errors.full_messages.each do |concert| %>
                         <li><%= message %></li>
                       <% end %>
                     </ul>
@@ -16,17 +16,17 @@
                 <% end %>
           <div class="w-50 mx-auto">
               <dl class="row">
-                <dt class="col-4"><%= f.label :image, "商品画像", class: "text-right" %></dt>
+                <dt class="col-4"><%= f.label :image, "コンサートイメージ画像", class: "text-right" %></dt>
                 <dd class="col-8"><%= f.file_field :image, class: "form-control-file pl-0", accept: "image/*" %></dd>
 
-                <dt class="col-4 mt-3"><%= f.label :name, "商品名", class: "text-right" %></dt>
-                <dd class="col-8 mt-3"><%= f.text_field :name, class: "form-control name", placeholder: "商品名" %></dd>
+                <dt class="col-4 mt-3"><%= f.label :name, "コンサート名", class: "text-right" %></dt>
+                <dd class="col-8 mt-3"><%= f.text_field :name, class: "form-control name", placeholder: "コンサート名" %></dd>
 
-                <dt class="col-4 mt-3"><%= f.label :introduction, "商品説明", class: "text-right" %></dt>
+                <dt class="col-4 mt-3"><%= f.label :introduction, "コンサート説明", class: "text-right" %></dt>
                 <dd class="col-8 mt-3"><%= f.text_area :introduction, class: "form-control introduction", placeholder: "ここに説明文を記述します" %></dd>
 
-                <dt class="col-4 mt-3"><%= f.label :genre_id, "ジャンル", class: "text-right" %></dt>
-                <dd class="col-8 mt-3"><%= f.collection_select :genre_id, Genre.all, :id, :name, include_blank: "--選択してください--" %></dd>
+                <dt class="col-4 mt-3"><%= f.label :category_id, "カテゴリー", class: "text-right" %></dt>
+                <dd class="col-8 mt-3"><%= f.collection_select :category_id, Category.all, :id, :name, include_blank: "--選択してください--" %></dd>
 
                 <dt class="col-4 mt-3"><%= f.label :price, "税抜価格", class: "text-right" %></dt>
                 <dd class="col-8 mt-3 input-group d-flex align-items-end"><%= f.text_field :price, class: "form-control price", placeholder: "1000" %>円</dd>
@@ -37,7 +37,7 @@
                   <%= f.radio_button :is_active, :true %>
                   <%= f.label :is_active, "販売中", value: "true", class: "mr-5" %>
                   <%= f.radio_button :is_active, :false %>
-                  <%= f.label :is_active, "販売停止中", value: "false" %>
+                  <%= f.label :is_active, "受付終了", value: "false" %>
                 </dd>
               </dl>
           </div>
