--- a/app/views/public/home/top.html.erb
+++ b/app/views/public/home/top.html.erb
@@ -1,7 +1,7 @@
 <div class="container px-5 px-sm-0">
  <div class="row">
   <div class="col-sm-2 mt-5">
-   <%= render 'public/tmp/genre_list', genres: @genres %>
+   <%= render 'public/tmp/category_list', categories: @categories %>
   </div>
 
   <div class="col-md-8 offset-md-1 mt-5">
@@ -10,24 +10,24 @@
         <%= image_tag 'cake-1850011_960_720', size:"600x350", style: "margin-bottom: -20px;" %>
         <div class="card-img-overlay d-flex justify-content-center align-items-center">
           <h3 class="card-title text-light text-center">
-            ようこそ、ながのCAKEへ!<br>
-            このサイトは、ケーキ販売のECサイトになります。<br>
-            会員でない方も商品の閲覧はできますが、<br>
-            購入には会員登録が必要になります。
+            ようこそ、concert_evaluationへ!<br>
+            このサイトは、コンサートのECサイトになります。<br>
+            会員でない方も閲覧はできますが、<br>
+            チケットの購入には会員登録が必要になります。
           </h3>
         </div>
       </div>
     <div class="container">
     <div class="row">
       <div class="col-md-10 offset-md-1 mt-5">
-        <h3 style="margin-left: -150px;">新着商品</h3>
+        <h3 style="margin-left: -150px;">新着情報</h3>
         <table class="table table-borderless float-right">
           <tr>
-            <% @items.each do |item| %>
+            <% @concerts.each do |concert| %>
               <td>
-                <%= link_to(image_tag(item.get_image, size: '230x150', class: 'card-image-top'), item_path(item.id)) %>
-                <%= link_to item.name, item_path(item.id) %></br>
-                <%= to_total_currency(item.add_tax_price) %>
+                <%= link_to(image_tag(concert.get_image, size: '230x150', class: 'card-image-top'), concert_path(concert.id)) %>
+                <%= link_to concert.name, concert_path(concert.id) %></br>
+                <%= to_total_currency(concert.add_tax_price) %>
               </td>
             <% end %>
           </tr>
@@ -35,6 +35,6 @@
       </div>
     </div>
   <div class="text-right">
-    <%= link_to "全ての商品を見る＞", items_path %>
+    <%= link_to "全ての商品を見る＞", concerts_path %>
   </div>
 </div>
