--- a/app/views/public/concerts/edit.html.erb
+++ b/app/views/public/concerts/edit.html.erb
@@ -5,22 +5,22 @@
 
         <h3 class="col-6"><span>コンサート情報編集</span></h3>
 
-        <%= form_with model: @concert, url: public_concert_path(@item.id), method: :patch, local:true, class: "container text-center pl-9" do |f| %>
+        <%= form_with model: @concert, url: public_concert_path(@concert.id), method: :patch, local:true, class: "container text-center pl-9" do |f| %>
         <div class="form-group row">
-          <label class="col-4 text-right">商品画像</label>
+          <label class="col-4 text-right">コンサート画像</label>
           <%= f.file_field :image, class: "col-4 form-control-file pl-0", accept: "image/*" %>
         </div>
         <div class="form-group row">
-          <label class="col-4 text-right">商品名</label>
-          <%= f.text_field :name, class: "col-4 form-control name", placeholder: "商品名" %>
+          <label class="col-4 text-right">コンサート名</label>
+          <%= f.text_field :name, class: "col-4 form-control name", placeholder: "コンサート名" %>
         </div>
         <div class="form-group row">
-          <label class="col-4 text-right">商品説明</label>
+          <label class="col-4 text-right">コンサート説明</label>
           <%= f.text_area :introduction, class: "col-4 form-control introduction", placeholder: "ここに説明文を記述します" %>
         </div>
         <div class="form-group row">
-          <label class="col-4 text-right">ジャンル</label>
-          <%= f.collection_select :genre_id, Genre.all, :id, :name, include_blank: "--選択してください--" %>
+          <label class="col-4 text-right">カテゴリー</label>
+          <%= f.collection_select :category_id, Category.all, :id, :name, include_blank: "--選択してください--" %>
         </div>
         <div class="form-group row">
           <label class="col-4 text-right">税抜価格</label>
