interruption concert_evaluation

--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -11,8 +11,8 @@
         </td>
         <td>
         <p>
-          (姓)<%= f.text_field :last_name, autofocus: true, autocomplete: "last_name",placeholder: "田中" %>
-          (名)<%= f.text_field :first_name, autofocus: true, autocomplete: "first_name",placeholder: "太郎" %></p>
+          (姓)<%= f.text_field :first_name, autofocus: true, autocomplete: "first_name",placeholder: "田中" %>
+          (名)<%= f.text_field :last_name, autofocus: true, autocomplete: "last_name",placeholder: "太郎" %></p>
         </td>
         </tr>
 
@@ -21,8 +21,8 @@
             <p><%= f.label "フリガナ" %></p>
           </td>
           <td>
-            <p>(セイ)<%= f.text_field :last_name_kana, autofocus: true, autocomplete: "last_name_kana",placeholder: "タナカ" %>
-            　(メイ)<%= f.text_field :first_name_kana, autofocus: true, autocomplete: "first_name_kana",placeholder: "タロウ" %></p>
+            <p>(セイ)<%= f.text_field :first_name_kana, autofocus: true, autocomplete: "first_name_kana",placeholder: "タナカ" %>
+            　(メイ)<%= f.text_field :last_name_kana, autofocus: true, autocomplete: "last_name_kana",placeholder: "タロウ" %></p>
           </td>
         </tr>
 
