--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -7,7 +7,7 @@
   <table class="table table-bordered table-hover mt-3">
     <thead class="thead-dark">
       <tr>
-        <th>商品名</th>
+        <th>チケット名</th>
         <th>単価(税込)</th>
         <th>数量</th>
         <th>小計</th>
@@ -25,7 +25,7 @@
         <td class="align-middle py-1"><%= cart.item.add_tax_price.to_s(:delimited) %>円</td>
         <td class="align-middle py-1">
           <div class="form-group mt-3">
-            <%= render 'public/tmp/amount', cart:cart, item:cart.item %>
+            <%= render 'public/tmp/sheet', cart:cart, concert:cart.concert %>
           </div>
         </td>
         <td class="align-middle py-1">
