--- a/app/views/public/concerts/edit.html.erb
+++ b/app/views/public/concerts/edit.html.erb
@@ -31,7 +31,7 @@
           <%= f.radio_button :is_active, :true %>
           <%= f.label :is_active, "販売中", value: "true", class: "mr-5" %>
           <%= f.radio_button :is_active, :false %>
-          <%= f.label :is_active, "販売停止中", value: "false" %>
+          <%= f.label :is_active, "受付終了", value: "false" %>
         </div>
         <div class="form-group text-center mt-5">
           <%= f.submit "変更を保存", class: "btn btn-success btn-lg" %>
