--- a/app/views/public/orders/comfirm.html.erb
+++ b/app/views/public/orders/comfirm.html.erb
@@ -8,9 +8,9 @@
             <table class='table table-bordered'>
                 <thead class='table-secondary'>
                     <tr>
-                        <th class='col-4'>商品名</th>
+                        <th class='col-4'>コンサート名</th>
                         <th class='col-1 text-center'>単価(税込)</th>
-                        <th class='col-1 text-center'>数量</th>
+                        <th class='col-1 text-center'>枚数</th>
                         <th class='col-1 text-center'>小計</th>
                      </tr>
                 </thead>
@@ -22,7 +22,7 @@
                             <%= cart.item.name %>
                         </td>
                         <td class='text-right'><%= cart.item.add_tax_price %>円</td>
-                        <td class='text-right'><%= cart.amount %>個</td>
+                        <td class='text-right'><%= cart.sheet %>枚</td>
                         <td class='text-right'><%= cart.add_total_payment_all %>円</td>
                     </tr>
                     <% end %>
@@ -33,16 +33,12 @@
         <div class='col-3'>
             <table class='table table-bordered'>
                 <tr>
-                    <td class='table-secondary'>送料</td>
-                    <td class='text-right'><%= @order.shipping_cost.to_s(:delimited) %>円</td>
-                </tr>
-                <tr>
                     <td class='table-secondary'>商品合計</td>
                     <td class='text-right'><%= @total %>円</td>
                 </tr>
                 <tr>
                     <td class='table-secondary'>請求金額</td>
-                    <td class='text-right'><%= @order.shipping_cost + @total %>円</td>
+                    <td class='text-right'><%= @total %>円</td>
                 </tr>
             </table>
          </div>
@@ -53,18 +49,12 @@
            　<%= @order.payment_method_i18n %>
     </div>
 
-    <div class='row ml-4 mb-2'>
-    　  <h5 class='col-2 font-weight-bolder'>お届け先</h5>
-    　       〒<%= @order.add_full_address %><br/>
-            <%= @order.name %>
-    </div>
     <div class='text-center mb-2'>
         <%= form_with model: @order, url:orders_path,method: :post do |f|%>
             <%= f.hidden_field :postal_code %>
             <%= f.hidden_field :address %>
             <%= f.hidden_field :name %>
-            <%= f.hidden_field :shipping_cost %>
-            <%= f.hidden_field :total_payment,:value => @total+@order.shipping_cost %>
+            <%= f.hidden_field :total_payment,:value => @total %>
             <%= f.hidden_field :payment_method %>
             <%= f.submit "注文を確定する", class: 'btn btn-success' %>
         <% end %>
