--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -11,14 +11,6 @@
           <td><%= @order.created_at.strftime('%Y/%m/%d') %></td>
         </tr>
         <tr>
-          <td class='table-secondary'>配送先</td>
-          <td>
-              〒<%= @order.postal_code %>
-              <%= @order.address %>
-              <%= @order.name %>
-           </td>
-        </tr>
-        <tr>
            <td>支払い方法</td>
             <td><%= @order.payment_method_i18n %></td>
         </tr>
@@ -36,10 +28,6 @@
           <td class='text-right'><%= @total.to_s(:delimited) %>円</td>
         </tr>
         <tr>
-            <td class='table-secondary'>送料</td>
-            <td class='text-right'><%= @order.shipping_cost.to_s(:delimited) %>円</td>
-        </tr>
-        <tr>
             <td class='table-secondary'>ご請求金額</td>
             <td class='text-right'><%= @order.total_payment %>円</td>
         </tr>
@@ -52,9 +40,9 @@
     <table class='table table-bordered col-8 text-center'>
       <thead class='table-secondary'>
         <tr>
-          <th class='col-4'>商品名</th>
+          <th class='col-4'>チケット名</th>
           <th class='col-1'>単価(税込)</th>
-          <th class='col-1'>個数</th>
+          <th class='col-1'>枚数</th>
           <th class='col-1'>小計</th>
         </tr>
       </thead>
@@ -68,7 +56,7 @@
             <td>
                 <%= order_detail.item.add_tax_price %>円</td>
             <td>
-                <%= order_detail.amount %>個</td>
+                <%= order_detail.sheet %>枚</td>
             <td>
                 <%= order_detail.add_total_payment_all %>円</td>
         </tr>
