--- a/app/views/public/revues/show.html.erb
+++ b/app/views/public/revues/show.html.erb
@@ -8,28 +8,25 @@
       <table class="table table-hover table-inverse">
         <div class="col-xs-4">
         <tr>
-          <td class="info">本のタイトル</td>
-          <td><%= @review.book.name %></td>
+          <td class="info">コンサート名</td>
+          <td><%= @revue.book.name %></td>
         </tr>
         </div>
         <tr>
           <td class="info">レビュータイトル</td>
-          <td><%= @review.title %></td>
+          <td><%= @revue.title %></td>
         </tr>
       </table>
       <h4>レビュー本文</h4>
       <div>
-        <%= @review.text %>
+        <%= @revue.text %>
       </div>
     </div>
   </div>
   <div class="low">
     <div class="col-xs-12">
-      <div class="col-xs-1 col-xs-offset-4">
-        <%= link_to "本の詳細に戻る", book_path(@book),class: "btn btn-primary btn-sm" %>
-      </div>
       <div class="col-xs-1 col-xs-offset-1">
-        <% if @review.user_id == current_user.id %>
+        <% if @revue.customer_id == current_user.id %>
         <%= link_to "編集", edit_book_review_path(@book, @review),class: "btn btn-primary btn-sm" %>
         <% end %>
       </div>
