--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -25,7 +25,7 @@
         <td class="align-middle py-1"><%= cart.item.add_tax_price.to_s(:delimited) %>円</td>
         <td class="align-middle py-1">
           <div class="form-group mt-3">
-            <%= render 'public/tmp/sheet', cart:cart, concert:cart.concert %>
+            <%= render 'public/tmp/sheet', cart:cart, concert:cart.item %>
           </div>
         </td>
         <td class="align-middle py-1">
