--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -44,14 +44,14 @@
               <%= link_to "編集する",  edit_customer_path(@customer), class: 'btn btn-success' %>
           </div>
 
-          <!--<div class="row no-gutters">-->
-          <!--    <div class="col-lg-4">-->
-          <!--        <h3>配送先</h3>-->
-          <!--   </div>-->
-          <!--   <div class="col-lg-2">-->
-          <!--       <%= link_to "一覧を見る",    addresses_path, class: 'btn btn-primary' %>-->
-          <!--   </div>-->
-          <!--</div>-->
+          <div class="row no-gutters">
+              <div class="col-lg-4">
+                  <h3>配送先</h3>
+             </div>
+             <div class="col-lg-2">
+                 <%= link_to "一覧を見る",    addresses_path, class: 'btn btn-primary' %>
+             </div>
+          </div>
           <div class="row no-gutters">
               <div class="col-lg-4">
                   <h3 >注文履歴</h3>
