--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -20,6 +20,58 @@
         <%= b.label({ class: "form-check-label"}) %><br/>
       <% end %>
 
+      <h5 class='font-weight-bolder'>お届け先</h5>
+      <div class='row flex-column ml-4 mb-2'>
+        <div>
+          <%= f.radio_button :option, 0, {checked: "checked", class: "form-input-check"} %>
+          <%= f.label :option_0, "ご自身の住所"%><br/>
+        </div>
+        <div class='ml-4 mb-2'>
+          〒<%= current_customer.postal_code %>
+          <%= current_customer.address %><br/>
+          <%= current_customer.add_full_name %>
+        </div>
+      </div>
+       <div class='row flex-column ml-4 mb-2'>
+         <div>
+          <%= f.radio_button :option, 1,{class: "from-input-check"} %>
+          <%= f.label :option_1, "登録済住所から選択"%><br>
+          </div>
+          <div class='ml-4 mb-2'>
+            <% if @addresses.nil? %>
+              <p>住所が登録されていません。</p>
+            <% else %>
+              <%= f.select :address_id, @addresses.map { |k| [t("#{k.join_address_name}"), k.id] },
+               { include_blank: "選択してください" }, class: "form-control" %>
+            <% end %>
+          </div>
+      </div>
+
+      <div class='row flex-column ml-4 mb-2'>
+        <div>
+          <%= f.radio_button :option, 2, {class: "from-input-check"} %>
+          <%= f.label :新しいお届け先 %>
+      </div>
+      <table class='col-8 ml-4 mb-2'>
+        <tr>
+          <td class='col-2'></td>
+          <td class='col-6'></td>
+        </tr>
+        <tr>
+          <td><%= f.label :other_postal_code, "郵便番号(ハイフンなし)" %></td>
+          <td><%= f.text_field :other_postal_code %></td>
+        </tr>
+        <tr>
+          <td><%= f.label :other_address, "住所" %></td>
+          <td><%= f.text_field :other_address, size: "50x20" %></td>
+        </tr>
+        <tr>
+          <td><%= f.label :other_name, "宛名" %></td>
+          <td><%= f.text_field :other_name %></td>
+        </tr>
+      </table>
+    </div>
+
     <div class='text-center mb-2'>
       <%= f.submit :"確認画面へ進む", class: 'btn btn-success' %>
     </div>
