interruption concert_evaluation

--- a/app/views/public/concerts/confirm.html.erb
+++ b/app/views/public/concerts/confirm.html.erb
@@ -21,52 +21,52 @@
                             <%= concert.introduction %>
                             <%= concert.price %>
                         </td>
-                        <!--<td class='text-right'><%= cart.item.add_tax_price %>円</td>-->
-                        <!--<td class='text-right'><%= cart.amount %>個</td>-->
-                        <!--<td class='text-right'><%= cart.add_total_payment_all %>円</td>-->
+                        <td class='text-right'><%= cart.item.add_tax_price %>円</td>
+                        <td class='text-right'><%= cart.amount %>個</td>
+                        <td class='text-right'><%= cart.add_total_payment_all %>円</td>
                     </tr>
                     <% end %>
                 </tbody>
               </table>
             </div>
 
-    <!--    <div class='col-3'>-->
-    <!--        <table class='table table-bordered'>-->
-    <!--            <tr>-->
-    <!--                <td class='table-secondary'>送料</td>-->
-    <!--                <td class='text-right'><%= @order.shipping_cost.to_s(:delimited) %>円</td>-->
-    <!--            </tr>-->
-    <!--            <tr>-->
-    <!--                <td class='table-secondary'>商品合計</td>-->
-    <!--                <td class='text-right'><%= @total %>円</td>-->
-    <!--            </tr>-->
-    <!--            <tr>-->
-    <!--                <td class='table-secondary'>請求金額</td>-->
-    <!--                <td class='text-right'><%= @order.shipping_cost + @total %>円</td>-->
-    <!--            </tr>-->
-    <!--        </table>-->
-    <!--     </div>-->
-    <!--</div>-->
+        <div class='col-3'>
+            <table class='table table-bordered'>
+                <tr>
+                    <td class='table-secondary'>送料</td>
+                    <td class='text-right'><%= @order.shipping_cost.to_s(:delimited) %>円</td>
+                </tr>
+                <tr>
+                    <td class='table-secondary'>商品合計</td>
+                    <td class='text-right'><%= @total %>円</td>
+                </tr>
+                <tr>
+                    <td class='table-secondary'>請求金額</td>
+                    <td class='text-right'><%= @order.shipping_cost + @total %>円</td>
+                </tr>
+            </table>
+         </div>
+    </div>
 
-    <!--<diV class='row ml-4 my-2'>-->
-    <!--    <h5 class='col-2 font-weight-bolder'>支払い方法</h5>-->
-    <!--       　<%= @order.payment_method_i18n %>-->
-    <!--</div>-->
+    <diV class='row ml-4 my-2'>
+        <h5 class='col-2 font-weight-bolder'>支払い方法</h5>
+           　<%= @order.payment_method_i18n %>
+    </div>
 
-    <!--<div class='row ml-4 mb-2'>-->
-    <!--　  <h5 class='col-2 font-weight-bolder'>お届け先</h5>-->
-    <!--　       〒<%= @order.add_full_address %><br/>-->
-    <!--        <%= @order.name %>-->
-    <!--</div>-->
+    <div class='row ml-4 mb-2'>
+    　  <h5 class='col-2 font-weight-bolder'>お届け先</h5>
+    　       〒<%= @order.add_full_address %><br/>
+            <%= @order.name %>
+    </div>
 
     <div class='text-center mb-2'>
         <%= form_with model: @concert, url:concerts_path,method: :post do |f|%>
-            <!--<%= f.hidden_field :postal_code %>-->
-            <!--<%= f.hidden_field :address %>-->
-            <!--<%= f.hidden_field :name %>-->
-            <!--<%= f.hidden_field :shipping_cost %>-->
-            <!--<%= f.hidden_field :total_payment,:value => @total+@order.shipping_cost %>-->
-            <!--<%= f.hidden_field :payment_method %>-->
+            <%= f.hidden_field :postal_code %>
+            <%= f.hidden_field :address %>
+            <%= f.hidden_field :name %>
+            <%= f.hidden_field :shipping_cost %>
+            <%= f.hidden_field :total_payment,:value => @total+@order.shipping_cost %>
+            <%= f.hidden_field :payment_method %>
             <%= f.submit "コンサート情報を登録する", class: 'btn btn-success' %>
         <% end %>
     </div>
