--- a/app/views/admin/categories/edit.html.erb
+++ b/app/views/admin/categories/edit.html.erb
@@ -1,8 +1,8 @@
 <div class='container'>
     <div class='row'>
         <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
-            <h2>ジャンル編集</h2>
-            <%= form_with model:@genre, url: admin_genre_path, method: :patch, local:true do |f| %>
+            <h2>カテゴリー編集</h2>
+            <%= form_with model:@category, url: admin_category_path, method: :patch, local:true do |f| %>
                 <div class="form-group">
                     <%= f.label :name %>
                     <%= f.text_field :name, class:'form-control book_title' %>
