--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -1,8 +1,8 @@
 <div class='container'>
     <div class='row'>
         <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
-            <h2>ジャンル一覧・追加</h2>
-            <%= form_with model:@genre, url: admin_genres_path, method: :post, local:true do |f| %>
+            <h2>カテゴリー一覧・追加</h2>
+            <%= form_with model:@category, url: admin_categories_path, method: :post, local:true do |f| %>
                 <div class="form-group">
                     <%= f.label :name %>
                     <%= f.text_field :name, class:'form-control book_title' %>
@@ -20,15 +20,15 @@
             <table class='table table-hover table-inverse'>
               <thead>
                 <tr>
-                    <th>ジャンル</th>
+                    <th>カテゴリー</th>
                     <th></th>
                 </tr>
             </thead>
             <tbody>
-                <% @genres.each { |genre| %>
+                <% @categories.each { |category| %>
                 <tr>
-                    <td><%= genre.name %></td>
-                    <td><%= link_to "編集する", edit_admin_genre_path(genre.id) %></td>
+                    <td><%= category.name %></td>
+                    <td><%= link_to "編集する", edit_admin_category_path(category.id) %></td>
                 </tr>
                 <% } %>
             </tbody>
