--- a/app/views/admin/concerts/index.html.erb
+++ b/app/views/admin/concerts/index.html.erb
@@ -1,11 +1,11 @@
 <div class="container my-5">
   <div class="row">
     <div class="col-10">
-      <h3><span class="bg-light bg-gradient">商品一覧</span></h3>
+      <h3><span class="bg-light bg-gradient">コンサート一覧</span></h3>
     </div>
-    <div class="col-2 ml-auto">
-      <%= link_to " + ", new_admin_item_path, class: "btn btn-light rounded-circle" %>
-    </div>
+    <!--<div class="col-2 ml-auto">-->
+    <!--  <%= link_to " + ", new_admin_item_path, class: "btn btn-light rounded-circle" %>-->
+    <!--</div>-->
 
             <table class='table table-hover table-inverse'>
               <thead>
@@ -18,14 +18,14 @@
                 </tr>
             </thead>
             <tbody>
-                <% @item.each do |item| %>
+                <% @concert.each do |concert| %>
                   <tr>
-                      <td><%= item.id %></td>
-                      <td><%= link_to item.name, admin_item_path(item.id)%></td>
-                      <td><%= item.price %></td>
-                      <td><%= item.genre.name %></td>
+                      <td><%= concert.id %></td>
+                      <td><%= link_to concert.name, admin_concert_path(concert.id)%></td>
+                      <td><%= concert.price %></td>
+                      <td><%= concert.category.name %></td>
                       <td>
-                      <%if item.is_active == true %>
+                      <%if concert.is_active == true %>
                         <strong class="text-success">販売中</strong>
                         <% else %>
                         <strong class="text-muted">販売停止中</strong>
@@ -35,7 +35,7 @@
                       <% end %>
                 </tbody>
             </table>
-            <%= paginate @item %>
+            <%= paginate @concert %>
         </div>
     </div>
 </div>
