--- a/app/views/admin/concerts/show.html.erb
+++ b/app/views/admin/concerts/show.html.erb
@@ -1,35 +1,35 @@
 <div class="container">
   <div class="row mt-5">
-    <h3 class="mb-5 ml-5">商品詳細</h3>
+    <h3 class="mb-5 ml-5">コンサート詳細</h3>
   </div>
   <div class="row">
     <div class="col-md-4">
-      <%= image_tag @item.get_image, size:'300x200' %>
+      <%= image_tag @concert.get_image, size:'300x200' %>
     </div>
     <div class="col-md-8">
       <div class="form-group row">
-        <p class="col-3 h5">商品名</p>
-        <p class="col-8"><%= @item.name %></p>
+        <p class="col-3 h5">コンサート名</p>
+        <p class="col-8"><%= @concert.name %></p>
       </div>
       <div class="form-group row">
-        <p class="col-3 h5">商品説明</p>
-        <p class="col-8"><%= @item.introduction %></p>
+        <p class="col-3 h5">コンサート説明</p>
+        <p class="col-8"><%= @concert.introduction %></p>
       </div>
       <div class="form-group row">
-        <p class="col-3 h5">ジャンル</p>
-        <p class="col-8"><%= @item.genre.name %></p>
+        <p class="col-3 h5">カテゴリー</p>
+        <p class="col-8"><%= @concert.category.name %></p>
       </div>
       <div class="form-group row">
         <p class="col-3 h5">税込価格<br>(税抜価格)</p>
-        <p class="col-8"><%= @item.add_tax_price.to_s(:delimited) %>（<%= @item.price.to_s(:delimited) %>）円</p>
+        <p class="col-8"><%= @concert.add_tax_price.to_s(:delimited) %>（<%= @concert.price.to_s(:delimited) %>）円</p>
       </div>
       <div class="form-group row">
         <p class="col-3 h5">販売ステータス</p>
-        <p class="col-8"><%= @item.is_active ? '販売中' : '販売停止中' %></p>
+        <p class="col-8"><%= @concert.is_active ? '販売中' : '受付終了' %></p>
       </div>
     </div>
   </div>
-  <div class="form-group text-center my-5">
-      <%= link_to "編集する", edit_admin_item_path, class: "btn btn-success btn-lg" %>
-    </div>
+  <!--<div class="form-group text-center my-5">-->
+  <!--    <%= link_to "編集する", edit_admin_item_path, class: "btn btn-success btn-lg" %>-->
+  <!--</div>-->
 </div>
