--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -15,7 +15,7 @@
   <div class="mt-5 offset-md-1">
    <h2>
     <span class="bg-secondary">
-     <%= @customer.last_name %><%= @customer.first_name %>さんの会員詳細
+     <%= @customer.first_name %><%= @customer.last_name %>さんの会員詳細
     </span>
     </h2>
   </div>
@@ -31,19 +31,19 @@
    <tr>
     <td>氏名</td>
     <td>
-     <%= f.text_field :last_name %>
+     <%= f.text_field :first_name %>
     </td>
     <td>
-     <%= f.text_field :first_name %>
+     <%= f.text_field :last_name %>
     </td>
    </tr>
    <tr>
     <td>カナ</td>
     <td>
-     <%= f.text_field :last_name_kana %>
+     <%= f.text_field :first_name_kana %>
     </td>
     <td>
-     <%= f.text_field :first_name_kana %>
+     <%= f.text_field :last_name_kana %>
     </td>
    </tr>
    <tr>
