interruption concert_evaluation

--- a/app/views/public/home/about.html.erb
+++ b/app/views/public/home/about.html.erb
@@ -3,13 +3,10 @@
     <div class="px-5 mx-auto ml-auto">
         <h1 style="font-size: 6em; margin-bottom: 0.3em;">About</h1>
         <p style="font-size: 1.5em;">
-          ながのCAKEは全国発送可能なケーキ屋さんです。<br>
-          お子様からお年寄りの方までお召し上がりいただけるよう、<br>
-          様々なバリエーションをご用意しております。<br>
-          また、全国へ発送可能ですので「いつ」でも「どこ」でもご注文いただけます。<br>
-          ぜひご注文ください。
+          concert_evaluationはコンサートのチケット購入サイトです。<br>
+          またご自身のイベント情報を発信することも可能です。<br>
         </p>
-        <%= image_tag 'eclair-3366430_960_720.jpg', size: "550x350" %>
+        <%= image_tag 'audience-1853662_1280', size: "550x350" %>
     </div>
   </div>
 </div>
