--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,11 @@
   </head>
 
   <body>
+    <%= render 'layouts/header' %>
+      <main>
+       <p id="notice"><%= notice %></p>
+      </main>
     <%= yield %>
+    <%= render 'layouts/footer' %>
   </body>
 </html>
