--- a/app/views/public/home/top.html.erb
+++ b/app/views/public/home/top.html.erb
@@ -7,7 +7,7 @@
   <div class="col-md-8 offset-md-1 mt-5">
     <div class="row">
       <div class="position-relative" style="left: 120px;">
-        <%= image_tag 'cake-1850011_960_720', size:"600x350", style: "margin-bottom: -20px;" %>
+        <%= image_tag 'concert-852575_1280', size:"600x350", style: "margin-bottom: -20px;" %>
         <div class="card-img-overlay d-flex justify-content-center align-items-center">
           <h3 class="card-title text-light text-center">
             ようこそ、concert_evaluationへ!<br>
@@ -35,6 +35,6 @@
       </div>
     </div>
   <div class="text-right">
-    <%= link_to "全ての商品を見る＞", concerts_path %>
+    <%= link_to "全ての商品を見る＞",  public_concerts_path %>
   </div>
 </div>
