--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -41,7 +41,7 @@
            </tr>
           </table>
           <div class="mt-10 offset-md-8">
-              <%= link_to "編集する",  edit_customer_path(@customer), class: 'btn btn-success' %>
+              <%= link_to "編集する",  edit_public_customer_path(@customer), class: 'btn btn-success' %>
           </div>
 
           <div class="row no-gutters">
@@ -49,7 +49,7 @@
                   <h3>配送先</h3>
              </div>
              <div class="col-lg-2">
-                 <%= link_to "一覧を見る",    addresses_path, class: 'btn btn-primary' %>
+                 <%= link_to "一覧を見る", public_addresses_path, class: 'btn btn-primary' %>
              </div>
           </div>
           <div class="row no-gutters">
@@ -57,7 +57,7 @@
                   <h3 >注文履歴</h3>
              </div>
              <div class="col-lg-2">
-                 <%= link_to "一覧を見る",  orders_path, class: 'btn btn-primary' %>
+                 <%= link_to "一覧を見る",  public_orders_path, class: 'btn btn-primary' %>
              </div>
           </div>
         </div>
