--- a/app/views/admin/concerts/index.html.erb
+++ b/app/views/admin/concerts/index.html.erb
@@ -3,17 +3,17 @@
     <div class="col-10">
       <h3><span class="bg-light bg-gradient">コンサート一覧</span></h3>
     </div>
-    <!--<div class="col-2 ml-auto">-->
-    <!--  <%= link_to " + ", new_admin_item_path, class: "btn btn-light rounded-circle" %>-->
-    <!--</div>-->
+    <div class="col-2 ml-auto">
+      <%= link_to " + ", new_admin_concert_path, class: "btn btn-light rounded-circle" %>
+    </div>
 
             <table class='table table-hover table-inverse'>
               <thead>
                 <tr class="bg-light">
-                    <th>商品ID</th>
-                    <th>商品名</th>
+                    <th>コンサートID</th>
+                    <th>コンサート名</th>
                     <th>税抜価格</th>
-                    <th>ジャンル</th>
+                    <th>カテゴリー</th>
                     <th>ステータス</th>
                 </tr>
             </thead>
@@ -28,7 +28,7 @@
                       <%if concert.is_active == true %>
                         <strong class="text-success">販売中</strong>
                         <% else %>
-                        <strong class="text-muted">販売停止中</strong>
+                        <strong class="text-muted">受付終了</strong>
                         <% end %>
                         </td>
                   </tr>
