--- a/app/views/admin/concerts/show.html.erb
+++ b/app/views/admin/concerts/show.html.erb
@@ -20,7 +20,7 @@
         <p class="col-8"><%= @concert.category.name %></p>
       </div>
       <div class="form-group row">
-        <p class="col-3 h5">税込価格<br>(税抜価格)</p>
+        <p class="col-3 h5">チケット税込価格<br>(税抜価格)</p>
         <p class="col-8"><%= @concert.add_tax_price.to_s(:delimited) %>（<%= @concert.price.to_s(:delimited) %>）円</p>
       </div>
       <div class="form-group row">
@@ -30,6 +30,6 @@
     </div>
   </div>
   <!--<div class="form-group text-center my-5">-->
-  <!--    <%= link_to "編集する", edit_admin_item_path, class: "btn btn-success btn-lg" %>-->
+  <!--    <%= link_to "編集する", edit_admin_concert_path, class: "btn btn-success btn-lg" %>-->
   <!--</div>-->
 </div>
