--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -18,7 +18,7 @@
     <td><%= customer.id %></td>
     <td>
      <%= link_to admin_customer_path(customer.id),class: 'text-primary' do %>
-      <%= customer.last_name %> <%= customer.first_name %>
+      <%= customer.first_name %> <%= customer.last_name %>
      <% end %>
     </td>
     <td><%= customer.email %></td>
