--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -20,13 +20,13 @@
    <tr>
     <td>氏名</td>
     <td>
-     <%= @customer.last_name %> <%= @customer.first_name %>
+     <%= @customer.first_name %> <%= @customer.last_name %>
     </td>
    </tr>
    <tr>
     <td>カナ</td>
     <td>
-     <%= @customer.last_name_kana %> <%= @customer.first_name_kana %>
+     <%= @customer.first_name_kana %> <%= @customer.last_name_kana %>
     </td>
    </tr>
    <tr>
