--- a/app/views/public/concerts/show.html.erb
+++ b/app/views/public/concerts/show.html.erb
@@ -65,7 +65,7 @@
   </table>
   </div>
   <div class ="paginate">
-    <%= paginate @revues, theme: 'custom_theme' %>
+    <%= paginate @revues %>
   </div>
   </div>
 </div>
