--- a/app/views/admin/comments/index.html.erb
+++ b/app/views/admin/comments/index.html.erb
@@ -1,2 +1,11 @@
-<h1>Admin::Comments#index</h1>
-<p>Find me in app/views/admin/comments/index.html.erb</p>
+<div>
+  <p>コメント件数：<%= @concert.comments.count %></p>
+  <% @concert.comments.each do |comment| %>
+    <p><%= image_tag comment.customer.get_profile_image(100,100) %></p>
+    <%= comment.customer.name %>
+    <%= comment.created_at.strftime('%Y/%m/%d') %><%= comment.comment %>
+    <% if comment.customer == current_customer %>
+     <%= link_to "削除", admin_concert_comment_path(comment.concert, comment), method: :delete %>
+    <% end %>
+  <% end %>
+</div>
