--- a/app/views/public/concerts/show.html.erb
+++ b/app/views/public/concerts/show.html.erb
@@ -35,8 +35,8 @@
 </div>
 
 <%# レビュー一覧表示%>
-  <div class="col-xs-7">
-  <div class="concert_show_title">レビュー一覧</div>
+<div class="col-xs-7">
+ <div class="concert_show_title">レビュー一覧</div>
   <div class="concert_show">
   <table class="table table-hover table-inverse">
     <thead>
@@ -60,12 +60,29 @@
         </td>
       </tr>
       <% end %>
+      <tr class="info">
+        <td><%= link_to 'レビューを書く', edit_public_concert_revue_path %></td>
+      </tr>
+      <div>
+       <p>コメント件数：<%= @revue.comments.count %></p>
+        <% @revue.comments.each do |comment| %>
+       <p><%= image_tag comment.user.get_profile_image(100,100) %></p>
+         <%= comment.customer.name %>
+         <%= comment.created_at.strftime('%Y/%m/%d') %><%= comment.comment %>
+        <% end %>
+      </div>
+      <div>
+       <%= form_with model: [@revue, @comment] do |f| %>
+        <%= f.text_area :comment, rows: '5', placeholder: "コメントをここに" %>
+        <%= f.submit "送信する" %>
+       <% end %>
+      </div>
     </tbody>
   </table>
   </div>
   <div class ="paginate">
     <%= paginate @revues %>
   </div>
-  </div>
+ </div>
 </div>
 <%# レビュー一覧表示%>
