--- a/app/views/public/comments/index.html.erb
+++ b/app/views/public/comments/index.html.erb
@@ -1,2 +1,14 @@
-<h1>Public::Comments#index</h1>
-<p>Find me in app/views/public/comments/index.html.erb</p>
+      <div>
+       <p>コメント件数：<%= @revue.comments.count %></p>
+        <% @revue.comments.each do |comment| %>
+       <p><%= image_tag comment.user.get_profile_image(100,100) %></p>
+         <%= comment.customer.name %>
+         <%= comment.created_at.strftime('%Y/%m/%d') %><%= comment.comment %>
+        <% end %>
+      </div>
+      <div>
+       <%= form_with model: [@revue, @comment] do |f| %>
+        <%= f.text_area :comment, rows: '5', placeholder: "コメントをここに" %>
+        <%= f.submit "送信する" %>
+       <% end %>
+      </div>
