--- a/app/views/public/comments/index.html.erb
+++ b/app/views/public/comments/index.html.erb
@@ -1,13 +1,13 @@
       <div>
        <p>コメント件数：<%= @revue.comments.count %></p>
         <% @revue.comments.each do |comment| %>
-       <p><%= image_tag comment.user.get_profile_image(100,100) %></p>
-         <%= comment.customer.name %>
+        <%# image_tag comment.user.get_profile_image(100,100) %>
+         <%= comment.customer.first_name %>
          <%= comment.created_at.strftime('%Y/%m/%d') %><%= comment.comment %>
         <% end %>
       </div>
       <div>
-       <%= form_with model: [@revue, @comment] do |f| %>
+       <%= form_with model: [@revue, @comment], url: public_concert_comments_path(concert_id: @revue.concert_id, revue_id: @revue.id), method: :post do |f| %>
         <%= f.text_area :comment, rows: '5', placeholder: "コメントをここに" %>
         <%= f.submit "送信する" %>
        <% end %>
