interruption concert_evaluation

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
 
   <body>
     <%= render 'layouts/header' %>
+    <%= render 'public/searches/serach' %>
       <main>
        <p id="notice"><%= notice %></p>
       </main>
