interruption concert_evaluation

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,6 +12,9 @@
             <%= link_to "マイページ", public_customer_path(current_customer),class: 'nav-link text-light' %>
           </li>
           <li class="mr-3">
+            <%= link_to "Aboutページ", public_about_path,class: 'nav-link text-light' %>
+          </li>
+          <li class="mr-3">
             <%= link_to "コンサート一覧", public_concerts_path,class: 'nav-link text-light' %>
           </li>
           <li class="mr-3">
