interruption concert_evaluation

--- a/app/views/public/home/about.html.erb
+++ b/app/views/public/home/about.html.erb
@@ -5,6 +5,8 @@
         <p style="font-size: 1.5em;">
           concert_evaluationはコンサートのチケット購入サイトです。<br>
           またご自身のイベント情報を発信することも可能です。<br>
+          コンサート情報の発信を依頼される方はこちらまでご連絡ください。<br>
+          concert _evaluation@example.com<br>
         </p>
         <%= image_tag 'audience-1853662_1280', size: "550x350" %>
     </div>
