--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -48,6 +48,9 @@
             <%= link_to "コンサート一覧", public_concerts_path,class: 'nav-link text-light' %>
           </li>
           <li class="mr-3">
+            <%= link_to "Aboutページ", public_about_path,class: 'nav-link text-light' %>
+          </li>
+          <li class="mr-3">
             <%= link_to "新規登録", new_customer_registration_path,class: 'nav-link text-light' %>
           </li>
           <li class="mr-3">
