interruption concert_evaluation

--- a/app/views/admin/concerts/new.html.erb
+++ b/app/views/admin/concerts/new.html.erb
@@ -16,8 +16,11 @@
                 <% end %>
           <div class="w-50 mx-auto">
               <dl class="row">
-                <dt class="col-4"><%= f.label :image, "コンサート画像", class: "text-right" %></dt>
+                <dt class="col-4"><%= f.label :image, "アーティスト画像", class: "text-right" %></dt>
                 <dd class="col-8"><%= f.file_field :image, class: "form-control-file pl-0", accept: "image/*" %></dd>
+
+                <dt class="col-4 mt-3"><%= f.label :name, "アーティスト名", class: "text-right" %></dt>
+                <dd class="col-8 mt-3"><%= f.text_field :name, class: "form-control name", placeholder: "アーティスト名" %></dd>
 
                 <dt class="col-4 mt-3"><%= f.label :name, "コンサート名", class: "text-right" %></dt>
                 <dd class="col-8 mt-3"><%= f.text_field :name, class: "form-control name", placeholder: "コンサート名" %></dd>
