--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -27,6 +27,13 @@
             </tr>
 
             <tr>
+                <td>ニックネーム</td>
+                <td>
+                    <%= f.text_field :nickname %>
+                </td>
+            </tr>
+
+            <tr>
                 <td>メールアドレス</td>
                 <td>
                     <%= f.text_field :email, autofocus: true, autocomplete: "email" %>
