--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -16,6 +16,12 @@
                 </td>
            </tr>
            <tr>
+               <td class="table-active">ニックネーム</td>
+               <td>
+                   <%= @customer.nickname %>
+                </td>
+           </tr>
+           <tr>
                <td class="table-active">メールアドレス</td>
                <td>
                    <%= @customer.email %>
