--- a/app/views/public/comments/index.html.erb
+++ b/app/views/public/comments/index.html.erb
@@ -15,7 +15,7 @@
         <% @revue.comments.each do |comment| %>
         <%# image_tag comment.user.get_profile_image(100,100) %>
         <tr>
-         <td><%= comment.customer.first_name %></td>
+         <td><%= comment.customer.nickname %></td>
          <td><%= comment.created_at.strftime('%Y/%m/%d') %></td>
          <td><%= comment.comment %></td>
         </tr>
