interruption concert_evaluation

--- a/app/views/admin/concerts/index.html.erb
+++ b/app/views/admin/concerts/index.html.erb
@@ -12,6 +12,8 @@
                 <tr class="bg-light">
                     <th>コンサートID</th>
                     <th>コンサート名</th>
+                    <!--<th>会員ID</th>-->
+                    <!--<th>アーティスト名</th>-->
                     <th>税抜価格</th>
                     <th>カテゴリー</th>
                     <th>ステータス</th>
