--- a/app/assets/stylesheets/public/concerts.scss
+++ b/app/assets/stylesheets/public/concerts.scss
@@ -1,3 +1,29 @@
 // Place all the styles related to the public/concerts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+.star-field{
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: right;
+}
+.star-field input[type='radio']{
+    display: none;
+}
+.star-field label{
+    font-size: 50px;
+    padding-right: 10px;
+    color: #ccc;
+    font-size: 30px;
+    cursor: pointer;
+}
+.star-field label:hover,
+.star-field label:hover ~ label,
+.star-field input[type='radio']:checked ~ label{
+    color: rgb(255, 145, 0);
+}
+
+// 一覧表示ページ
+.star{
+  font-size: 50px;
+  color: rgb(255, 145, 0);
+}
